--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+      "DefaultConnection": "Data Source=wwwroot/SlothFlying.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
