--- a/.gitignore
+++ b/.gitignore
@@ -438,3 +438,9 @@ $RECYCLE.BIN/
 ## Images File
 wwwroot/images/users/*
 !wwwroot/images/users/.placeholder
+wwwroot/images/labs/*
+!wwwroot/images/labs/Arduino.jpg
+!wwwroot/images/labs/Digital-multimeter.jpg
+!wwwroot/images/labs/Oscilloscope.png
+!wwwroot/images/labs/Rasberry_Pi.jpg
+!wwwroot/images/labs/Router.jpg
