--- a/SlothFlyingWeb.csproj
+++ b/SlothFlyingWeb.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.14"/>
   </ItemGroup>
 </Project>
