--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,11 @@
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=wwwroot/SlothFlying.db;"
     },
+    "CoLabApi": {
+        "ApiUri" : "https://localhost:5001",
+        "GetLabPath" : "/Api/GetLab",
+        "GetLabBookingPath" : "/Api/GetBooking"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
