--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-      "DefaultConnection": "Data Source=wwwroot/SlothFlying.db;"
+    "DefaultConnection": "Data Source=wwwroot/SlothFlying.db;"
+  },
+  "CoLabApi": {
+    "ApiUri": "https://slothflying.azurewebsites.net",
+    "GetLabPath": "/Api/GetLab",
+    "GetLabBookingPath": "/Api/GetBooking"
   },
   "Logging": {
     "LogLevel": {
