--- a/appsettings.json
+++ b/appsettings.json
@@ -2,10 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=wwwroot/SlothFlying.db;"
   },
-  "CoLabApi": {
-    "ApiUri": "https://slothflying.azurewebsites.net",
-    "GetLabPath": "/Api/GetLab",
-    "GetLabBookingPath": "/Api/GetBooking"
+  "DinoLabApi": {
+    "ApiUri": "https://dinolabkmitl.azurewebsites.net",
+    "GetLabPath": "/Api/GetLab"
   },
   "Logging": {
     "LogLevel": {
